refactor: OpenGraph 코드 리팩토링